# senha-segura

./: LICENSE  README.md  pyproject.toml
src/api/: main.py
src/core/: regras.py  validador.py
src/ui/: app.py
src/ui/html/: app.js  index.html  styles.css
