# pyproject.toml

[project]
name = "senha-segura"
version = "0.0.1"
description = "Verificador de senha segura com FastAPI e Streamlit"
authors = [
    { name = "Augusto Vieira" }
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit"
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=61.0.0"]  
build-backend = "setuptools.build_meta"  